I added Chinese and English comments, and corrected the naming of some functions.

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,8 +4,10 @@ platform :ios, '13.0'
 
 target 'Moisture_Example' do
 
-  pod 'Moisture', :path => '../'
-
+#  pod 'Moisture', :path => '../'
+#  
+  pod 'Moisture/Rx', :path => '../'
+  
   target 'Moisture_Tests' do
     inherit! :search_paths
 
